<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        tools:context=".ui.add_order.CreateOrderFragment">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etShopTitleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:id="@+id/etShopTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_hint_shop_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/EditTextStyle"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etShopLocationLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="22dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etShopTitleLayout"
            app:layout_constraintHorizontal_bias="0.0" >

        <EditText
                android:id="@+id/etShopLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:hint="@string/et_hint_location"
                style="@style/EditTextStyle"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etDateLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="22dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/etShopLocationLayout"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

        <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                style="@style/EditTextStyle"
                android:enabled="true"
                android:clickable="true"
                android:editable="false"
                android:hint="@string/et_hint_date"
                android:focusable="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/btn_next_step"
            style="@style/ButtonStyle"
            android:id="@+id/btnNextStep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottomButtonMarginBottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/bottomButtonMarginEnd"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bottomButtonMarginStart"/>

</androidx.constraintlayout.widget.ConstraintLayout>