<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/app_navigation"
            app:startDestination="@id/orders">

    <fragment android:id="@+id/orders"
              android:name="bohdan.sushchak.elementzonetest.ui.orders.OrdersFragment"
              android:label="orders_fragment"
              tools:layout="@layout/orders_fragment">

        <action android:id="@+id/actionCreateOrder"
                app:destination="@id/createOrderFragment"/>

        <action android:id="@+id/actionDetailOrder"
                app:destination="@id/orderDetailFragment"/>
        <argument
                android:name="isHideActionBar"
                app:argType="boolean"
                android:defaultValue="true"/>
        <argument
                android:name="isNeedUpdateOrders"
                app:argType="boolean"
                android:defaultValue="false"/>
        <action android:id="@+id/actionLoginActivity" app:destination="@id/loginActivity"/>
    </fragment>

    <fragment android:id="@+id/createOrderFragment"
              android:name="bohdan.sushchak.elementzonetest.ui.add_order.CreateOrderFragment"
              android:label="@string/toolbar_title_shop_data"
              tools:layout="@layout/create_order_fragment">

        <action android:id="@+id/actionAddItemsToOrder"
                app:destination="@id/addItemListToOrderFragment"/>
    </fragment>

    <fragment android:id="@+id/addItemListToOrderFragment"
              android:name="bohdan.sushchak.elementzonetest.ui.item_list.AddItemListToOrderFragment"
              android:label="@string/toolbar_title_order_list"
              tools:layout="@layout/add_item_list_to_order_fragment">
        <argument android:name="shopTitle" app:argType="string"/>
        <argument android:name="location" app:argType="string"/>
        <argument android:name="date" app:argType="string"/>
        <action
                android:id="@+id/actionOrders"
                app:destination="@id/orders"
                app:launchSingleTop="true"
                app:popUpTo="@+id/app_navigation"
                app:popUpToInclusive="true"/>
    </fragment>

    <fragment android:id="@+id/orderDetailFragment"
              android:name="bohdan.sushchak.elementzonetest.ui.order_detail.OrderDetailFragment"
              android:label="@string/toolbar_title_order_data"
              tools:layout="@layout/order_detail_fragment">
        <argument android:name="order" app:argType="bohdan.sushchak.elementzonetest.data.network.responces.Order"/>
    </fragment>
    <activity android:id="@+id/loginActivity" android:name="bohdan.sushchak.elementzonetest.ui.login.LoginActivity"
              android:label="activity_login" tools:layout="@layout/activity_login"/>
</navigation>