<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        tools:context=".ui.item_list.AddItemListToOrderFragment">

    <TextView
            android:text="@string/txt_product"
            style="@style/TextHeaderStyle"
            android:layout_width="match_parent"
            android:lines="1"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="56dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"/>

    <EditText
            android:hint="@string/et_hint_product"
            android:id="@+id/etProductTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            style="@style/EditTextStyle"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_marginEnd="4dp"
            android:layout_marginStart="56dp"
            app:layout_constraintEnd_toStartOf="@+id/fabAddProduct"
            app:layout_constraintHorizontal_bias="1.0"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton

            android:src="@drawable/ic_add_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:elevation="8dp"
            app:fabCustomSize="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:id="@+id/fabAddProduct"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rlProduct"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etProductTitle"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/product_item"
            android:layout_marginStart="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tvPrice">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
            android:text="@string/txt_price"
            style="@style/TextHeaderStyle"
            android:layout_width="0dp"
            android:lines="1"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="56dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp"
            android:id="@+id/tvPrice"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/etProductPrice"/>

    <EditText

            android:hint="@string/et_hint_product"
            android:id="@+id/etProductPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/EditTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSaveOrder"/>

    <Button
            android:text="@string/btn_done"
            style="@style/ButtonStyle"
            android:id="@+id/btnSaveOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottomButtonMarginBottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/bottomButtonMarginEnd"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bottomButtonMarginStart"/>

</androidx.constraintlayout.widget.ConstraintLayout>